# template-rust-auth

./: .env  Cargo.toml
.github/workflows/: rust.yml
migrations/: 20250109130905_auth.down.sql  20250109130905_auth.up.sql
src/: main.rs
src/config/: database.rs  mod.rs
src/http/: mod.rs
src/http/auth/: auth.rs  mod.rs  repository.rs  service.rs
src/http/jwt/: jwt.rs  mod.rs  repository.rs
src/http/session/: mod.rs  repository.rs  service.rs  session.rs
src/http/token/: mod.rs  repository.rs  service.rs  token.rs
src/http/user/: mod.rs  repository.rs  service.rs  user.rs
src/middleware/: auth_middleware.rs
src/utils/: bcrypt.rs  convert.rs  mod.rs  string.rs
