[package]
name = "template_rest_auth"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
bcrypt = "0.16.0"
chrono = { version = "0.4.39", features = ["serde"] }
jsonwebtoken = "9.3.0"
log = "0.4.25"
serde = {version="1.0.217", features=["derive"]}
serde_json = "1.0.135"
sqlx = { version = "0.8.3", features = [ "time", "postgres", "chrono", "uuid", "ipnetwork" ] }
sqlx-cli = "0.8.3"
uuid = {version = "1.12.1", features = ["v4", "serde", "fast-rng", "macro-diagnostics"]}
